# n-body-problem

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md  main.cpp  n-body-problem.sln  n-body-problem.vcxproj  n-body-problem.vcxproj.filters
body/: body.cpp  body.cu  body.cuh  body.hpp
misc/: settings.hpp  util.cpp  util.hpp
render/: input.cpp  input.hpp  render.cpp  render.hpp
src/body/: body.cpp  body.cu  body.cuh  body.hpp
src/misc/: settings.hpp  util.cpp  util.hpp
src/render/: input.hpp  render.cpp  render.hpp
